Improved the functionality and; logos added; track covers settle.

--- a/react-vite-app/index.html
+++ b/react-vite-app/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Update favicon link to use your logo -->
+    <link rel="icon" href="/assets/covers/logo.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="Dreaming Polar - An immersive music experience with beautiful visualizations" />
+    <meta name="keywords" content="music player, music visualizer, react, web application" />
+    <meta property="og:title" content="Dreaming Polar" />
+    <meta property="og:description" content="An immersive music experience" />
+    <meta property="og:url" content="https://www.dreamingpolar.com/" />
+    <!-- Add OpenGraph image for social media link previews -->
+    <meta property="og:image" content="https://www.dreamingpolar.com/assets/covers/logo.jpeg" />
+    <title>Dreaming Polar</title>
   </head>
   <body>
     <div id="root"></div>
