Replaced the logo from 'public/assets/logos/logo_8_mini.jpeg' to 'public/assets/logos/logo_8_mini.png' ---replaced the existing repeat button with a more visually appealing one that supports three states: no repeat, repeat list, and repeat one.

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Favicon and Apple Touch Icons -->
-    <link rel="icon" type="image/jpeg" href="/assets/logos/logos/logo_8_mini.jpeg" />
-    <link rel="apple-touch-icon" href="/assets/logos/logo_8_mini.jpeg" />
+    <link rel="icon" type="image/jpeg" href="/assets/logos/logo_8_mini.png" />
+    <link rel="apple-touch-icon" href="/assets/logos/logo_8_mini.png" />
     
     <!-- Primary Meta Tags -->
-    <title>DreamingPolar</title>
+    <title>Dreaming Polar</title>
     <meta name="title" content="Dreaming Polar - Immersive Music Experience" />
     <meta name="description" content="Experience music like never before with Dreaming Polar's beautiful visualizations and immersive audio experience." />
     <meta name="keywords" content="music player, music visualizer, react, web application, audio visualization, immersive music, dreaming polar" />
